--- a/arch/arm/mach-tegra/Kconfig
+++ b/arch/arm/mach-tegra/Kconfig
@@ -312,6 +312,16 @@ config MACH_APALIS_TK1
          Support for Toradex Apalis TK1 module on Apalis evaluation carrier
          board
 
+config MACH_YELLOWSTONE
+       bool "YELLOWSTONE board"
+       depends on ARCH_TEGRA_12x_SOC || ARCH_TEGRA_11x_SOC
+       select MACH_HAS_SND_SOC_TEGRA_RT5639 if SND_SOC
+       select MACH_HAS_SND_SOC_TEGRA_RT5645 if SND_SOC
+       select SYSEDP_FRAMEWORK
+       help
+         Support for NVIDIA YELLOWSTONE Development platform
+
+
 config MACH_LOKI
        bool "Loki board"
        depends on ARCH_TEGRA_12x_SOC
