--- a/drivers/media/platform/tegra/Makefile
+++ b/drivers/media/platform/tegra/Makefile
@@ -19,6 +19,9 @@ obj-$(CONFIG_VIDEO_OV5650)	+= ov5650.o
 obj-$(CONFIG_VIDEO_OV5640)	+= ov5640.o
 obj-$(CONFIG_VIDEO_OV14810)	+= ov14810.o
 obj-$(CONFIG_VIDEO_OV9726)	+= ov9726.o
+obj-$(CONFIG_VIDEO_OV9762)      += ov9762.o
+obj-$(CONFIG_VIDEO_OV4682)      += ov4682.o
+obj-$(CONFIG_VIDEO_OV7251)      += ov7251.o
 obj-$(CONFIG_VIDEO_OV9772)	+= ov9772.o nvc_utilities.o
 obj-$(CONFIG_VIDEO_OV2710)	+= ov2710.o
 obj-$(CONFIG_VIDEO_SOC380)	+= soc380.o
